One line of color

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 				  position: absolute;
 				  width: 75%;
 				  height: 100%;
-				  background-color: #00ff00;
+				  background-color: #009933;
 				}
 			</style>
 			<div id="myProgressBudget">
